--- a/package.json
+++ b/package.json
@@ -115,7 +115,9 @@
     "@vscode/webview-ui-toolkit": "^0.8.4",
     "axios": "^0.24.0",
     "lodash.uniqby": "^4.7.0",
-    "nanoid": "^3.1.30"
+    "nanoid": "^3.1.30",
+    "svelte-collapse": "^0.1.1",
+    "svelte-select": "^4.4.7"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^20.0.0",
@@ -151,6 +153,7 @@
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
+    "scss": "^0.2.4",
     "simple-git-hooks": "^2.6.1",
     "stylelint": "^14.1.0",
     "stylelint-config-html": "^1.0.0",
