--- a/package.json
+++ b/package.json
@@ -239,8 +239,7 @@
   },
   "lint-staged": {
     "*.{js,ts}": "eslint --fix",
-    "*.{js,ts,svelte}": "prettier --write",
-    "*.svelte": "stylelint --ip *.md src/**/*.svelte --fix"
+    "*.{js,ts,svelte}": "prettier --write"
   },
   "simple-git-hooks": {
     "pre-commit": "npx lint-staged"
