--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,41 +1,63 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
+  # Triggers the workflow on push events for all branches or pull request for main branch
   push:
-    branches: "*"
+    branches: [ "*" ]
+  pull_request:
+    branches: [ "main" ]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
-    runs-on: windows-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    strategy:
+      matrix:
+        os: [windows-latest, macos-latest, ubuntu-latest]
+    runs-on: ${{ matrix.os }}
+    
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: yarn --version
+      - name: Install vscode for linux and mac
+        if: runner.os != 'Windows' # Limit step to run only on linux and mac
+        shell: bash
+        run: |
+          if [ "$RUNNER_OS" == "Linux" ]; then # ref: https://code.visualstudio.com/docs/setup/linux
+            sudo apt-get install wget gpg
+            wget -qO- https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > packages.microsoft.gpg
+            sudo install -D -o root -g root -m 644 packages.microsoft.gpg /etc/apt/keyrings
+            sudo sh -c 'echo "deb [arch=amd64,arm64,armhf signed-by=/etc/apt/keyrings/packages.microsoft.gpg] https://packages.microsoft.com/repos/code stable main" > /etc/apt/sources.list.d/vscode.list'
+            rm -f packages.microsoft.gpg
+            sudo apt install apt-transport-https
+            sudo apt update
+            sudo apt install code
+          elif [ "$RUNNER_OS" == "macOS" ]; then
+            /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)" # Using brew to install vscode on mac
+            brew install --cask visual-studio-code
+          fi
+  
+      - name: Install vscode for windows
+        shell: pwsh # Using powershell to run commands on windows
+        if: runner.os == 'Windows'
+        run: | # Download portable vscode (.zip) and extract it to the working directory
+          Invoke-WebRequest -Uri "https://code.visualstudio.com/sha/download?build=stable&os=win32-x64-archive" -OutFile VSCode_x64.zip
+          Expand-Archive .\VSCode_x64.zip
 
-      # Install node modules and create a vsix file
-      - name: Run a multi-line script
+      - name: Build extension
         run: |
           yarn
           npx vsce package
-      - name: Archive an artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: vsix_file
-          path: ./*.vsix
-      - name: Download a single artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: vsix_file
-
+  
+      - name: Install extension on linux and mac
+        if: runner.os != 'Windows'
+        run: code --install-extension *.vsix
+      
+      - name: Install extension on windows
+        shell: pwsh
+        if: runner.os == 'Windows'
+        run: |
+          $env:Path += ";$pwd\VSCode_x64\bin" # Adding the 'code' application to the PATH
+          code --install-extension $(Get-ChildItem *.vsix).name
