evil ts evit rollup evil writable

--- a/src/settings/tsconfig.json
+++ b/src/settings/tsconfig.json
@@ -1,5 +1,5 @@
 {
   "extends": "@tsconfig/svelte/tsconfig.json",
-  "include": ["./**/*.ts"],
+  "include": ["./**/*.ts", "../*.ts"],
   "exclude": ["node_modules/*"]
 }
