new run creation bug was FIXED, vr bug fixed too, some renames and documentation added

--- a/package.json
+++ b/package.json
@@ -146,7 +146,7 @@
     "commands": [
       {
         "command": "certora.createConfFile",
-        "title": "Create conf file",
+        "title": "create new job",
         "category": "Certora",
         "icon": "$(settings)"
       }
