add vsce app to publish

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,4 +84,7 @@ jobs:
         with:
           name: vscode-certora-prover
       - name: Publish extension
-        run: vsce publish -p ${{ secrets.VSCE_PAT }}
+        run: |
+          npx vsce package
+          vsce --help # vsce publish -p ${{ secrets.VSCE_PAT }}
+          vsce --version
