--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,6 +80,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18'
+      - name: Install vscode extensions cli
+        run: npm install -g @vscode/vsce
       - name: Download extension
         uses: actions/download-artifact@v3
         with:
