--- a/package.json
+++ b/package.json
@@ -146,7 +146,7 @@
     "commands": [
       {
         "command": "certora.openSettings",
-        "title": "Open settings",
+        "title": "Open Settings",
         "category": "VSCode",
         "icon": "$(settings)"
       }
