--- a/package.json
+++ b/package.json
@@ -171,11 +171,13 @@
     "typecheck:svelte": "svelte-check --tsconfig ./src/results/tsconfig.json"
   },
   "dependencies": {
+    "@types/node-fetch": "^2.6.2",
     "@vscode/codicons": "^0.0.26",
     "@vscode/webview-ui-toolkit": "^1.0.0",
     "axios": "^0.24.0",
     "lodash.uniqby": "^4.7.0",
     "nanoid": "^3.1.30",
+    "node-fetch": "2",
     "svelte-collapse": "^0.1.1",
     "svelte-select": "^4.4.7"
   },
