don't use yarn with publish

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,4 +93,4 @@ jobs:
         with:
           name: vscode-certora-prover
       - name: Publish extension
-        run: vsce publish -p ${{ secrets.VSCE_PAT }}
+        run: vsce publish -p ${{ secrets.VSCE_PAT }} --no-yarn
