--- a/package.json
+++ b/package.json
@@ -309,7 +309,7 @@
     }
   },
   "lint-staged": {
-    "*.{js,ts}": "eslint --fix",
+    "*.{js,ts}": "yarn run eslint --fix",
     "*.{js,ts,svelte}": "prettier --write"
   },
   "simple-git-hooks": {
