env variable and default branch

--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
           },
           "Branch": {
             "type": "string",
-            "default": "master",
+            "default": "",
             "order": 3
           }
         }
